--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Icon?
 ehthumbs.db
 Thumbs.db
 BashDungeon 2.0/.vs/BashDungeon 2.0/v15/sqlite3/storage.ide
+BashDungeon 2.0/.vs/BashDungeon 2.0/v15/sqlite3/storage.ide
